# vault-memory

./: .gitignore  .vault-memory.json  AGENTS.md  CONTRIBUTING.md  README.md  UPDATED_SPRINT_PROMPT.md  USER_GUIDE.md  VERIFIED_SPRINT_PLAN.md  docker-compose.yml  init_db.sql  oh-my-opencode-slim.jsonc  pyproject.toml
.claude/: settings.local.json
.github/workflows/: codeql.yml
.jules/: bolt.md  sentinel.md
.jules/agents/: Bridge.md  Conductor.md  Sentinel.md
.jules/tasks/: weekly_schedule.md
.pytest_tmp/: test_default_valuescurrent  test_env_var_embeddingscurrent  test_env_vars_override_config_current  test_find_missing_pages_uses_fcurrent  test_port_as_stringcurrent  test_port_validation_positivecurrent  test_sync_canvas_uses_batch_emcurrent  test_sync_file_markdown_uses_scurrent  test_vault_path_defaultcurrent
.pytest_tmp/test_sync_canvas_uses_batch_em0/vault/: .vault-memory-state.json
cli/: __init__.py  main.py  mcp_adapter.py  mcp_client.py  proxy.py  prune_command.py  sync_command.py
cli/mcp/: package.json
cli/tools/: context.py  knowledge.py  retrieval.py  sessions.py  vault.py
cli/tui/: __init__.py  app.py
daemon/: __init__.py  auth.py  canvas_graph_pipeline.py  circuit_breaker.py  config.py  context_assembler.py  db_abstraction.py  dependencies.py  embedder.py  git_integration.py  health.py  heartbeat.py  lint.py  main.py  pg_client.py  retrieval.py  security.py  sync_watcher.py  topology.py  validate_write.py  version.py  weaviate_client.py
daemon/backends/: __init__.py  postgres_client.py  sqlite_client.py
daemon/helpers/: __init__.py  responses.py  security.py  streaming.py  validation.py
daemon/middleware/: __init__.py  audit.py  correlation.py  rate_limiter.py  security.py
daemon/models/: __init__.py  bulk.py  error.py  knowledge.py  search.py  sessions.py  sync.py
daemon/routes/: __init__.py  bulk.py  graph.py  knowledge.py  search.py  sessions.py  sync.py  temporal.py  usage.py
docs/: API_CHANGELOG.md  CONTEXT_ASSEMBLY.md  SCORING.md  SKILL_SCHEMA.md  SLIM_SYNC.md  SPRINT_MASTER.md  STATE_TEMPLATE.md
docs/archive/: P2_P3_SPRINT_PLAN.md  README.md  SPRINT_S10_BUG_FIXES.md
docs/sprints/: CONDUCTOR_MASTER.md  S30_CODEBASE_INTEGRITY.md  SPRINT_MODERNIZE_NO_COMPAT.md  SPRINT_P9_REVIEW_PROMPT.md
obsidian-plugin/: .gitignore  CHANGELOG.md  README.md  esbuild.config.mjs  eslint.config.mjs  main.js  manifest.json  package.json  styles.css  tsconfig.json
obsidian-plugin/src/: SettingsTab.ts  main.ts
scripts/: linear-add-labels.js  linear-backfill-s21-s23.js  linear-import-setup.js  linear-link-cycles-to-project.js  linear-link-cycles.js  linear-sprint-import.js  setup-codex-windows.ps1
tests/: conftest.py  test_bolt_optimization.py  test_canvas_graph_pipeline.py  test_chunking_bolt.py  test_config.py  test_dependencies.py  test_di_integration.py  test_error_handling.py  test_error_security.py  test_integration.py  test_lint.py  test_lite_mode_guards.py  test_mcp_auth.py  test_mcp_p9_tools.py  test_pg_client.py  test_regex.py  test_retrieval_entities.py  test_sanitize.py  test_security_ripgrep.py  test_sentinel_leakage.py  test_session_cleanup.py  test_sqlite_client.py  test_sync_batch_optimization.py  test_syntax.py  test_version_alignment.py
vault_memory.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+29 files in other folders)
