[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "vault-memory"
version = "0.1.0"
description = "Always-on local memory layer for Obsidian"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "pvnkmnk"}]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "click>=8.1",
    "rich>=13.7",
    "watchdog>=4.0",
    "psycopg2-binary>=2.9",
    "weaviate-client>=4.6",
    "sentence-transformers>=3.0",
    "pydantic>=2.7",
    "torch>=2.3",
]

[project.scripts]
vault-memory  = "cli.main:cli"
vault-memoryd = "daemon.main:start"

[tool.setuptools.packages.find]
where = ["."]
include = ["daemon*", "cli*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.sql", "*.yml"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
